--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aria-query": "^5.0.1",
     "@types/d3-color": "^3.1.0",
     "@types/d3-delaunay": "^6.0.1",
     "@types/d3-scale": "^4.0.3",
