--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
         "noEmit": true,
         "allowImportingTsExtensions": true,
         "esModuleInterop": true,
-        "jsx": "react"
+        "jsx": "react",
+        "typeRoots": [
+            "node_modules/@types"
+        ]
     }
 }
